{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 48,
  "lineage": "c9400970-eaa2-1e95-8738-59e0f7cdcf8c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/backendAddressPools/web-backend-pool",
                "ip_addresses": [],
                "name": "web-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/frontendIPConfigurations/appgw-frontend-ip",
                "name": "appgw-frontend-ip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/publicIPAddresses/pip-appgw-prod",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/frontendIPConfigurations/appgw-frontend-ip",
                "frontend_ip_configuration_name": "appgw-frontend-ip",
                "frontend_port_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod",
            "identity": [],
            "location": "koreacentral",
            "name": "appgw-prod",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/backendAddressPools/web-backend-pool",
                "backend_address_pool_name": "web-backend-pool",
                "backend_http_settings_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-dr-prod",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.appgw",
            "azurerm_resource_group.main",
            "azurerm_subnet.appgw",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "was",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/networkInterfaces/nic-was-prod",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.21.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-was"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "mac_address": "60-45-BD-46-C8-BA",
            "name": "nic-was-prod",
            "private_ip_address": "172.16.21.4",
            "private_ip_addresses": [
              "172.16.21.4"
            ],
            "resource_group_name": "rg-dr-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.was",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/networkInterfaces/nic-web-prod",
            "internal_domain_name_suffix": "o3j2q5j1vmqeflmfuamxjyjjra.syx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.11.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/publicIPAddresses/pip-web-prod",
                "subnet_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-web"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "koreacentral",
            "mac_address": "00-22-48-CD-12-09",
            "name": "nic-web-prod",
            "private_ip_address": "172.16.11.4",
            "private_ip_addresses": [
              "172.16.11.4"
            ],
            "resource_group_name": "rg-dr-prod",
            "virtual_machine_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Compute/virtualMachines/vm-web-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.web",
            "azurerm_resource_group.main",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_gateway_backend_address_pool_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/backendAddressPools/web-backend-pool",
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/networkInterfaces/nic-web-prod/ipConfigurations/internal|/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/applicationGateways/appgw-prod/backendAddressPools/web-backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/networkInterfaces/nic-web-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_application_gateway.main",
            "azurerm_network_interface.web",
            "azurerm_public_ip.appgw",
            "azurerm_public_ip.web",
            "azurerm_resource_group.main",
            "azurerm_subnet.appgw",
            "azurerm_subnet.web",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "was",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-was-prod",
            "location": "koreacentral",
            "name": "nsg-was-prod",
            "resource_group_name": "rg-dr-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "43.201.1.235/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-8080-from-Web",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "172.16.11.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/networkSecurityGroups/nsg-web-prod",
            "location": "koreacentral",
            "name": "nsg-web-prod",
            "resource_group_name": "rg-dr-prod",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "43.201.1.235/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/publicIPAddresses/pip-appgw-prod",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.217.221.157",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "pip-appgw-prod",
            "resource_group_name": "rg-dr-prod",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/publicIPAddresses/pip-vpn-prod",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.218.9.99",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "pip-vpn-prod",
            "resource_group_name": "rg-dr-prod",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "prod"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/publicIPAddresses/pip-web-prod",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.217.199.7",
            "ip_version": "IPv4",
            "location": "koreacentral",
            "name": "pip-web-prod",
            "resource_group_name": "rg-dr-prod",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-appgw",
            "name": "subnet-appgw",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dr-prod",
            "virtual_network_name": "vnet-dr-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.31.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "mysql-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforMySQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-db",
            "name": "subnet-db",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dr-prod",
            "virtual_network_name": "vnet-dr-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.255.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dr-prod",
            "virtual_network_name": "vnet-dr-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "was",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.21.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-was",
            "name": "subnet-was",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dr-prod",
            "virtual_network_name": "vnet-dr-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.11.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-web",
            "name": "subnet-web",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-dr-prod",
            "virtual_network_name": "vnet-dr-prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7dc85377-ab3b-4220-ad85-a01974e12988",
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod",
            "location": "koreacentral",
            "name": "vnet-dr-prod",
            "resource_group_name": "rg-dr-prod",
            "subnet": [
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-appgw",
                "name": "subnet-appgw"
              },
              {
                "address_prefix": "172.16.11.0/24",
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-web",
                "name": "subnet-web"
              },
              {
                "address_prefix": "172.16.21.0/24",
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-was",
                "name": "subnet-was"
              },
              {
                "address_prefix": "172.16.255.0/24",
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "172.16.31.0/24",
                "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/subnet-db",
                "name": "subnet-db"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "172.16.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "4.218.9.99"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworkGateways/vgw-prod",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/publicIPAddresses/pip-vpn-prod",
                "subnet_id": "/subscriptions/fdc2f63f-a7bc-4ac7-901a-c730f7d317e9/resourceGroups/rg-dr-prod/providers/Microsoft.Network/virtualNetworks/vnet-dr-prod/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "koreacentral",
            "name": "vgw-prod",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "rg-dr-prod",
            "sku": "VpnGw1",
            "tags": {
              "Environment": "prod"
            },
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.vpn",
            "azurerm_resource_group.main",
            "azurerm_subnet.gateway",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    }
  ]
}